# Data_mining_G6

./: .gitignore  README.md  TODO  cluster_analysis.ipynb  main.ipynb  main.py  main_template.ipynb  pyproject.toml  with_validation.ipynb
src/: DBScan.py  NearestNeighbours.py  cluster_metrics.py  text_preprocessing.py  topic_detection.py
