[project]
name = "data-mining-g6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.5.0",
    "huggingface-hub>=1.4.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab-execute-time>=3.3.0",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "scikit-learn>=1.8.0",
    "scipy-stubs~=1.17.0",
    "sentence-transformers>=5.2.3",
    "wordcloud>=1.9.6",
]
