[project]
name = "data-mining-g6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.5.0",
    "huggingface-hub>=1.4.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab-execute-time>=3.3.0",
    "kaleido>=1.2.0",
    "kneed>=0.8.5",
    "loguru>=0.7.3",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "playwright>=1.58.0",
    "plotly>=6.6.0",
    "rich>=14.3.2",
    "scikit-learn>=1.8.0",
    "scipy-stubs~=1.17.0",
    "sentence-transformers>=5.2.3",
    "umap-learn>=0.5.11",
    "wordcloud>=1.9.6",
]
